Separate english and french pages + minor edits

--- a/fr.html
+++ b/fr.html
@@ -267,12 +267,11 @@
     <div class="status"></div>
   </div>
   <center class="main">
-	<h3>====================<br/>[ENGLISH] - <a href="./fr.html">FRANÇAIS</a><br>====================<h3>
-    <h1 id="slogan">Lay that Wall to Waste!</h1>
-    <p>Sk8Border was created in Montréal in March/April 2018 for the <a href="https://itch.io/jam/antifa-game-jam">Anti-Fascist Game Jam</a>. It is built with <a href="https://www.lexaloffle.com/pico-8.php">PICO-8</a>.</p>
-    <p>TODO: plus d'infos</p>
-    <p>This game runs in your web browser - even on your phone!</p>
-    <button id="play_game">Let's Go!</button>
+	<h3>====================<br/><a href="./index.html">ENGLISH</a> - [FRANÇAIS]<br>====================<h3>
+    <h1 id="slogan">Détruisez ce mur!</h1>
+    <p>Sk8Border a été créé à Montréal en mars/avril 2018 pour le <a href="https://itch.io/jam/antifa-game-jam">Anti-Fascist Game Jam</a>. Il est fait avec <a href="https://www.lexaloffle.com/pico-8.php">PICO-8</a>.</p>
+    <p>Ce jeu fonctionne dans le navigateur - même sur les téléphones!</p>
+    <button id="play_game">Allons-y!</button>
     <div class="desk_game">
       <canvas class="emscripten" oncontextmenu="event.preventDefault()"></canvas>
       <div class="desk_controls">
@@ -299,19 +298,19 @@
         </div>
       </div>
     </div>
-    <h2 id="controls">How to play</h2>
+    <h2 id="controls">Comment jouer</h2>
     <ul>
-      <li>Hold <span class="pico-8">Î</span> (Z) or <span class="pico-8">×</span> (X) while on the ground to crouch</li>
-      <li>Release both <span class="pico-8">Î</span> and <span class="pico-8">×</span> to do an ollie (jump)</li>
-      <li>Hold <span class="pico-8">Î</span> while above the wall to perform a 5-0 (tail) grind</li>
-      <li>Hold <span class="pico-8">×</span> to perform a nosegrind</li>
-      <li>Rack up more points by alternating grinds</li>
-      <li>Chain together grinds to max out your power meter... and blow that wall to smithereens!</li>
+      <li>Tenez <span class="pico-8">Î</span> (Z) ou <span class="pico-8">×</span> (X) lorsque vous êtes au sol pour vous pencher</li>
+      <li>Relâchez à la fois <span class="pico-8">Î</span> and <span class="pico-8">×</span> pour faire un ollie (sauter)</li>
+      <li>Tenez <span class="pico-8">Î</span> lorsqu'au-dessus du mur pour faire un 5-0 (tail) grind</li>
+      <li>Tenez <span class="pico-8">×</span> pour faire un nosegrind</li>
+      <li>Obtenez plus de points en alternant les grinds</li>
+      <li>Enchaînez les grinds sur le mur pour remplir la jauge de puissance... et faire voler ce mur en éclats!</li>
     </ul>
-    <h2 id="fonts">Fonts on this page</h2>
+    <h2 id="fonts">Polices de caractères sur cette page</h2>
     <ul>
-      <li><a href="http://pixel-fonts.com/">Softsquare</a> font by <a href="https://twitter.com/chevyray">Chevy Ray Johnston</a></li>
-      <li>Thanks to <a href="https://www.lexaloffle.com/bbs/?tid=3760">RhythmLynx</a> for making the PICO-8 font available on the web, and to <a href="https://twitter.com/lexaloffle">Zep</a> d'avoir créé cet outil!</li>
+      <li><a href="http://pixel-fonts.com/">Softsquare</a> par <a href="https://twitter.com/chevyray">Chevy Ray Johnston</a></li>
+      <li>Merci à <a href="https://www.lexaloffle.com/bbs/?tid=3760">RhythmLynx</a> d'avoir rendu la police de PICO-8 disponible sur the web, et à <a href="https://twitter.com/lexaloffle">Zep</a>, développeur de cet outil!</li>
     </ul>
   </center>
 
