--- a/fr.html
+++ b/fr.html
@@ -245,7 +245,7 @@
     .control_btn button:focus {
       outline: 0;
     }
-    .playing #controls {
+    .playing #opensource {
       margin-top: 3.6rem;
     }
   </style>
@@ -268,9 +268,18 @@
   </div>
   <center class="main">
 	<h3>====================<br/><a href="./index.html">ENGLISH</a> - [FRANÇAIS]<br>====================<h3>
-    <h1 id="slogan">Détruisez ce mur!</h1>
-    <p>Sk8Border a été créé à Montréal en mars/avril 2018 pour le <a href="https://itch.io/jam/antifa-game-jam">Anti-Fascist Game Jam</a>. Il est fait avec <a href="https://www.lexaloffle.com/pico-8.php">PICO-8</a>.</p>
+    <h1 id="slogan">Fracassez ce mur!</h1>
+    <p>Sk8Border a été créé à Montréal en mars/avril 2018 pour le <a href="https://itch.io/jam/antifa-game-jam">Anti-Fascist Game Jam</a>, par Leif Halldór Ásgeirsson, <a href="http://uncanard.com">Marc-André Toupin</a> et <a href="https://twitter.com/Benwiley4000">Ben Wiley</a>. Il est fait avec <a href="https://www.lexaloffle.com/pico-8.php">PICO-8</a>.</p>
     <p>Ce jeu fonctionne dans le navigateur - même sur les téléphones!</p>
+	<h2 id="controls">Comment jouer</h2>
+    <ul>
+      <li>Tenez <span class="pico-8">Î</span> (Z) ou <span class="pico-8">×</span> (X) lorsque vous êtes au sol pour vous pencher</li>
+      <li>Relâchez à la fois <span class="pico-8">Î</span> and <span class="pico-8">×</span> pour faire un ollie (sauter)</li>
+      <li>Tenez <span class="pico-8">Î</span> lorsqu'au-dessus du mur pour faire un 5-0 (tail) grind</li>
+      <li>Tenez <span class="pico-8">×</span> pour faire un nosegrind</li>
+      <li>Obtenez plus de points en alternant les grinds</li>
+      <li>Enchaînez les grinds sur le mur pour remplir la jauge de puissance... et faire voler ce mur en éclats!</li>
+    </ul>
     <button id="play_game">Allons-y!</button>
     <div class="desk_game">
       <canvas class="emscripten" oncontextmenu="event.preventDefault()"></canvas>
@@ -298,15 +307,8 @@
         </div>
       </div>
     </div>
-    <h2 id="controls">Comment jouer</h2>
-    <ul>
-      <li>Tenez <span class="pico-8">Î</span> (Z) ou <span class="pico-8">×</span> (X) lorsque vous êtes au sol pour vous pencher</li>
-      <li>Relâchez à la fois <span class="pico-8">Î</span> and <span class="pico-8">×</span> pour faire un ollie (sauter)</li>
-      <li>Tenez <span class="pico-8">Î</span> lorsqu'au-dessus du mur pour faire un 5-0 (tail) grind</li>
-      <li>Tenez <span class="pico-8">×</span> pour faire un nosegrind</li>
-      <li>Obtenez plus de points en alternant les grinds</li>
-      <li>Enchaînez les grinds sur le mur pour remplir la jauge de puissance... et faire voler ce mur en éclats!</li>
-    </ul>
+	<h2 id="opensource">Ce jeu est open source. Wow!</h2>
+    <p><a href="https://github.com/sk8border/sk8border/">GITHUB</a></p>
     <h2 id="fonts">Polices de caractères sur cette page</h2>
     <ul>
       <li><a href="http://pixel-fonts.com/">Softsquare</a> par <a href="https://twitter.com/chevyray">Chevy Ray Johnston</a></li>
