--- a/index.html
+++ b/index.html
@@ -245,7 +245,7 @@
     .control_btn button:focus {
       outline: 0;
     }
-    .playing #controls {
+    .playing #opensource {
       margin-top: 3.6rem;
     }
   </style>
@@ -269,9 +269,17 @@
   <center class="main">
 	<h3>====================<br/>[ENGLISH] - <a href="./fr.html">FRANÇAIS</a><br>====================<h3>
     <h1 id="slogan">Lay that Wall to Waste!</h1>
-    <p>Sk8Border was created in Montréal in March/April 2018 for the <a href="https://itch.io/jam/antifa-game-jam">Anti-Fascist Game Jam</a>. It is built with <a href="https://www.lexaloffle.com/pico-8.php">PICO-8</a>.</p>
-    <p>TODO: plus d'infos</p>
+    <p>Sk8Border was created in Montréal in March/April 2018 for the <a href="https://itch.io/jam/antifa-game-jam">Anti-Fascist Game Jam</a> as a collaborative effort by Leif Halldór Ásgeirsson, <a href="http://uncanard.com">Marc-André Toupin</a> and <a href="https://twitter.com/Benwiley4000">Ben Wiley</a>. It is built with <a href="https://www.lexaloffle.com/pico-8.php">PICO-8</a>.</p>
     <p>This game runs in your web browser - even on your phone!</p>
+	<h2 id="controls">How to play</h2>
+    <ul>
+      <li>Hold <span class="pico-8">Î</span> (Z) or <span class="pico-8">×</span> (X) while on the ground to crouch</li>
+      <li>Release both <span class="pico-8">Î</span> and <span class="pico-8">×</span> to do an ollie (jump)</li>
+      <li>Hold <span class="pico-8">Î</span> while above the wall to perform a 5-0 (tail) grind</li>
+      <li>Hold <span class="pico-8">×</span> to perform a nosegrind</li>
+      <li>Rack up more points by alternating grinds</li>
+      <li>Chain together grinds to max out your power meter... and blow that wall to smithereens!</li>
+    </ul>
     <button id="play_game">Let's Go!</button>
     <div class="desk_game">
       <canvas class="emscripten" oncontextmenu="event.preventDefault()"></canvas>
@@ -299,15 +307,8 @@
         </div>
       </div>
     </div>
-    <h2 id="controls">How to play</h2>
-    <ul>
-      <li>Hold <span class="pico-8">Î</span> (Z) or <span class="pico-8">×</span> (X) while on the ground to crouch</li>
-      <li>Release both <span class="pico-8">Î</span> and <span class="pico-8">×</span> to do an ollie (jump)</li>
-      <li>Hold <span class="pico-8">Î</span> while above the wall to perform a 5-0 (tail) grind</li>
-      <li>Hold <span class="pico-8">×</span> to perform a nosegrind</li>
-      <li>Rack up more points by alternating grinds</li>
-      <li>Chain together grinds to max out your power meter... and blow that wall to smithereens!</li>
-    </ul>
+	<h2 id="opensource">This game is open source. Woah!</h2>
+    <p><a href="https://github.com/sk8border/sk8border/">GITHUB REPOSITORY</a></p>
     <h2 id="fonts">Fonts on this page</h2>
     <ul>
       <li><a href="http://pixel-fonts.com/">Softsquare</a> font by <a href="https://twitter.com/chevyray">Chevy Ray Johnston</a></li>
