--- a/fr.html
+++ b/fr.html
@@ -245,7 +245,7 @@
     .control_btn button:focus {
       outline: 0;
     }
-    .playing #opensource {
+    .playing #separator {
       margin-top: 3.6rem;
     }
   </style>
@@ -268,7 +268,7 @@
   </div>
   <center class="main">
 	<h3>====================<br/><a href="./index.html">ENGLISH</a> - [FRANÇAIS]<br>====================<h3>
-    <h1 id="slogan">Fracassez ce mur!</h1>
+    <h1 id="slogan">Fracassez la frontière!</h1>
     <p>Sk8Border a été créé à Montréal en mars/avril 2018 pour le <a href="https://itch.io/jam/antifa-game-jam">Anti-Fascist Game Jam</a>, par Leif Halldór Ásgeirsson, <a href="http://uncanard.com">Marc-André Toupin</a> et <a href="https://twitter.com/Benwiley4000">Ben Wiley</a>. Il est fait avec <a href="https://www.lexaloffle.com/pico-8.php">PICO-8</a>.</p>
     <p>Ce jeu fonctionne dans le navigateur - même sur les téléphones!</p>
 	<h2 id="controls">Comment jouer</h2>
@@ -307,8 +307,10 @@
         </div>
       </div>
     </div>
+	<h3 id="separator">==============================</h3>
 	<h2 id="opensource">Ce jeu est open source. Wow!</h2>
     <p><a href="https://github.com/sk8border/sk8border/">GITHUB</a></p>
+	<p><small>Ou chargez ce png dans PICO-8!</small></br></br><img src = "./sk8border.p8.png"></img></p>
     <h2 id="fonts">Polices de caractères sur cette page</h2>
     <ul>
       <li><a href="http://pixel-fonts.com/">Softsquare</a> par <a href="https://twitter.com/chevyray">Chevy Ray Johnston</a></li>
