--- a/index.html
+++ b/index.html
@@ -245,7 +245,7 @@
     .control_btn button:focus {
       outline: 0;
     }
-    .playing #opensource {
+    .playing #separator {
       margin-top: 3.6rem;
     }
   </style>
@@ -307,8 +307,10 @@
         </div>
       </div>
     </div>
+	<h3 id="separator">==============================</h3>
 	<h2 id="opensource">This game is open source. Woah!</h2>
-    <p><a href="https://github.com/sk8border/sk8border/">GITHUB REPOSITORY</a></p>
+	<p><a href="https://github.com/sk8border/sk8border/">GITHUB REPOSITORY</a></p>
+	<p><small>Or load this png in PICO-8!</small></br></br><img src = "./sk8border.p8.png"></img></p>
     <h2 id="fonts">Fonts on this page</h2>
     <ul>
       <li><a href="http://pixel-fonts.com/">Softsquare</a> font by <a href="https://twitter.com/chevyray">Chevy Ray Johnston</a></li>
