--- a/fr.html
+++ b/fr.html
@@ -269,7 +269,7 @@
   <center class="main">
 	<h3>====================<br/><a href="./index.html">ENGLISH</a> - [FRANÇAIS]<br>====================<h3>
     <h1 id="slogan">Fracassez la frontière!</h1>
-    <p>Sk8Border a été créé à Montréal en mars/avril 2018 pour le <a href="https://itch.io/jam/antifa-game-jam">Anti-Fascist Game Jam</a>, par Leif Halldór Ásgeirsson, <a href="http://uncanard.com">Marc-André Toupin</a> et <a href="https://twitter.com/Benwiley4000">Ben Wiley</a>. Il est fait avec <a href="https://www.lexaloffle.com/pico-8.php">PICO-8</a>.</p>
+    <p>Sk8Border a été créé à Montréal en mars/avril 2018 pour le <a href="https://itch.io/jam/antifa-game-jam">Game Jam Antifasciste</a>, par Leif Halldór Ásgeirsson, <a href="http://uncanard.com">Marc-André Toupin</a> et <a href="https://twitter.com/Benwiley4000">Ben Wiley</a>. Il est fait avec <a href="https://www.lexaloffle.com/pico-8.php">PICO-8</a>.</p>
     <p>Ce jeu fonctionne dans le navigateur - même sur les téléphones!</p>
 	<h2 id="controls">Comment jouer</h2>
     <ul>
