--- a/fr.html
+++ b/fr.html
@@ -308,6 +308,8 @@
       </div>
     </div>
 	<h3 id="separator">==============================</h3>
+	<h2>Télécharger</h2>
+	<p>Les fichiers exécutables pour Linux, Windows et Mac sont disponibles sur <a href="https://sk8border.itch.io/sk8border">ITCH.IO</a></p>
 	<h2 id="opensource">Ce jeu est open source. Wow!</h2>
     <p><a href="https://github.com/sk8border/sk8border/">GITHUB</a></p>
 	<p><small>Ou chargez ce png dans PICO-8!</small></br></br><img src = "./sk8border.p8.png"></img></p>
