--- a/index.html
+++ b/index.html
@@ -308,6 +308,8 @@
       </div>
     </div>
 	<h3 id="separator">==============================</h3>
+	<h2>Download</h2>
+	<p>Binaries for Linux, Windows and Mac are available on <a href="https://sk8border.itch.io/sk8border">ITCH.IO</a></p>
 	<h2 id="opensource">This game is open source. Woah!</h2>
 	<p><a href="https://github.com/sk8border/sk8border/">GITHUB REPOSITORY</a></p>
 	<p><small>Or load this png in PICO-8!</small></br></br><img src = "./sk8border.p8.png"></img></p>
