--- a/index.html
+++ b/index.html
@@ -267,6 +267,7 @@
     <div class="status"></div>
   </div>
   <center class="main">
+	<img src="./img/sk8border.p8_10.gif">
 	<h3>====================<br/>[ENGLISH] - <a href="./fr.html">FRANÇAIS</a><br>====================<h3>
     <h1 id="slogan">Lay that Wall to Waste!</h1>
     <p>Sk8Border was created in Montréal in March/April 2018 for the <a href="https://itch.io/jam/antifa-game-jam">Anti-Fascist Game Jam</a> as a collaborative effort by Leif Halldór Ásgeirsson, <a href="http://uncanard.com">Marc-André Toupin</a> and <a href="https://twitter.com/Benwiley4000">Ben Wiley</a>. It is built with <a href="https://www.lexaloffle.com/pico-8.php">PICO-8</a>.</p>
