--- a/index.html
+++ b/index.html
@@ -272,16 +272,7 @@
     <h1 id="slogan">Lay that Wall to Waste!</h1>
     <p>Sk8Border was created in Montréal in March/April 2018 for the <a href="https://itch.io/jam/antifa-game-jam">Anti-Fascist Game Jam</a> as a collaborative effort by Leif Halldór Ásgeirsson, <a href="http://uncanard.com">Marc-André Toupin</a> and <a href="https://twitter.com/Benwiley4000">Ben Wiley</a>. It is built with <a href="https://www.lexaloffle.com/pico-8.php">PICO-8</a>.</p>
     <p>This game runs in your web browser - even on your phone!</p>
-	<h2 id="controls">How to play</h2>
-    <ul>
-      <li>Hold <span class="pico-8">Î</span> (Z) or <span class="pico-8">×</span> (X) while on the ground to crouch</li>
-      <li>Release both <span class="pico-8">Î</span> and <span class="pico-8">×</span> to do an ollie (jump)</li>
-      <li>Hold <span class="pico-8">Î</span> while above the wall to perform a 5-0 (tail) grind</li>
-      <li>Hold <span class="pico-8">×</span> to perform a nosegrind</li>
-      <li>Rack up more points by alternating grinds</li>
-      <li>Chain together grinds to max out your power meter... and blow that wall to smithereens!</li>
-    </ul>
-    <button id="play_game">Let's Go!</button>
+    <button id="play_game">Let's go!</button>
     <div class="desk_game">
       <canvas class="emscripten" oncontextmenu="event.preventDefault()"></canvas>
       <div class="desk_controls">
@@ -308,6 +299,15 @@
         </div>
       </div>
     </div>
+	<h2 id="controls">How to play</h2>
+    <ul>
+      <li>Hold <span class="pico-8">Î</span> (Z) or <span class="pico-8">×</span> (X) while on the ground to crouch</li>
+      <li>Release both <span class="pico-8">Î</span> and <span class="pico-8">×</span> to do an ollie (jump)</li>
+      <li>Hold <span class="pico-8">Î</span> while above the wall to perform a 5-0 (tail) grind</li>
+      <li>Hold <span class="pico-8">×</span> to perform a nosegrind</li>
+      <li>Rack up more points by alternating grinds</li>
+      <li>Chain together grinds to max out your power meter... and blow that wall to smithereens!</li>
+    </ul>
 	<h3 id="separator">==============================</h3>
 	<h2>Download</h2>
 	<p>Binaries for Linux, Windows and Mac are available on <a href="https://sk8border.itch.io/sk8border">ITCH.IO</a></p>
