fixed some french text

--- a/fr.html
+++ b/fr.html
@@ -304,7 +304,7 @@
     </div>
 	<h2 id="controls">Comment jouer</h2>
     <ul>
-      <li>Tenez <span class="pico-8">Î</span> (Z) ou <span class="pico-8">×</span> (X) lorsque vous êtes au sol pour vous pencher</li>
+      <li>Tenez <span class="pico-8">Î</span> (Z) ou <span class="pico-8">×</span> (X) lorsque vous êtes au sol pour vous accroupir</li>
       <li>Relâchez à la fois <span class="pico-8">Î</span> and <span class="pico-8">×</span> pour faire un ollie (sauter)</li>
       <li>Tenez <span class="pico-8">Î</span> lorsqu'au-dessus du mur pour faire un 5-0 (tail) grind</li>
       <li>Tenez <span class="pico-8">×</span> pour faire un nosegrind</li>
@@ -313,14 +313,14 @@
     </ul>
 	<h3 id="separator">==============================</h3>
 	<h2>Télécharger</h2>
-	<p>Les fichiers exécutables pour Linux, Windows et Mac sont disponibles de <a href="" id="itch">ITCH.IO</a></p>
+	<p>Les fichiers exécutables pour Linux, Windows et Mac sont disponibles sur <a href="" id="itch">ITCH.IO</a></p>
 	<h2 id="opensource">Ce jeu est open source. Wow!</h2>
     <p><a href="https://github.com/sk8border/sk8border/">GITHUB</a></p>
-	<p><small>Ou chargez ce cart dans PICO-8!</small></br></br><img src = "./sk8border.p8.png"></img></p>
+	<p><small>Ou chargez cette cartouche dans PICO-8!</small></br></br><img src = "./sk8border.p8.png"></img></p>
     <h2 id="fonts">Polices de caractères sur cette page</h2>
     <ul>
       <li><a href="http://pixel-fonts.com/">Softsquare</a> par <a href="https://twitter.com/chevyray">Chevy Ray Johnston</a></li>
-      <li>Merci à <a href="https://www.lexaloffle.com/bbs/?tid=3760">RhythmLynx</a> d'avoir rendu la police de PICO-8 disponible sur the web, et à <a href="https://twitter.com/lexaloffle">Zep</a>, développeur de cet outil!</li>
+      <li>Merci à <a href="https://www.lexaloffle.com/bbs/?tid=3760">RhythmLynx</a> d'avoir rendu la police de PICO-8 disponible sur the web, et à <a href="https://twitter.com/lexaloffle">Zep</a>, développeur de PICO-8!</li>
     </ul>
   </center>
 
