Small changes to itch placeholder.

--- a/itch-placeholder/index.html
+++ b/itch-placeholder/index.html
@@ -35,9 +35,9 @@
 </head>
 <body style="background-color:#5e564e">
 	<div id="main">
-		<h1><a href="http://sk8border.github.io/sk8border" target="_blank">Play here!</a></h1>
-		<h1><a href="http://sk8border.github.io/sk8border/fr" target="_blank">Jouez ici!</a></h1>
-		<h1 id="back"><a href="javascript:history.back()" target="_blank">Go back / Sortir d'ici</a></h1>
+		<h1><a href="http://sk8border.github.io/sk8border" target="_blank">Play here! (english)</a></h1>
+		<h1><a href="http://sk8border.github.io/sk8border/fr" target="_blank">Jouez ici! (français)</a></h1>
+		<h1 id="back"><a href="javascript:location.reload()" target="_blank">Go back / Sortir d'ici</a></h1>
 	</div>	
 	<script>
 		if (/Mobile|Android|webOS|iPhone|iPad|iPod|BlackBerry|BB|PlayBook|IEMobile|Windows Phone|Kindle|Silk|Opera Mini/i.test(navigator.userAgent)) {
