--- a/itch-placeholder/index.html
+++ b/itch-placeholder/index.html
@@ -46,8 +46,7 @@
 			document.getElementById("back").style.display="none";
 		}
 		document.querySelector('#back').addEventListener('click', function() {
-			window.location.href = '/sk8border';
-			window.location.reload(true);
+			window.location.href = 'https://sk8border.itch.io/sk8border';
 		});
 	</script>
 </body>
