--- a/fr.html
+++ b/fr.html
@@ -271,7 +271,7 @@
   </div>
   <center class="main">
 	<img src="./img/sk8border_screenshot_4.gif">
-	<h3 id="lang">====================<br/><a href="./index.html">ENGLISH</a> - [FRANÇAIS]<br>====================<h3>
+	<h3 id="lang">====================<br/><a href="./">ENGLISH</a> - [FRANÇAIS]<br>====================<h3>
     <h1 id="slogan">Fracassez la frontière!</h1>
     <p>Sk8Border a été créé à Montréal en mars/avril 2018 pour le <a href="https://itch.io/jam/antifa-game-jam">Game Jam Antifasciste</a>, par Leif Halldór Ásgeirsson, <a href="http://uncanard.com">Marc-André Toupin</a> et <a href="https://twitter.com/Benwiley4000">Ben Wiley</a>. Il est fait avec <a href="https://www.lexaloffle.com/pico-8.php">PICO-8</a>.</p>
     <p>Ce jeu fonctionne dans le navigateur - même sur les téléphones!</p>
