Web page tells game which language to use.

--- a/web_template/template.html
+++ b/web_template/template.html
@@ -362,6 +362,7 @@
     var Module = {};
     // disable autostart
     Module.noInitialRun = true;
+    window.LANG_FR={{lang_fr}};
   </script>
   <script src="{{build_filename}}"></script>
   <script>
