--- a/index.html
+++ b/index.html
@@ -362,6 +362,7 @@
     var Module = {};
     // disable autostart
     Module.noInitialRun = true;
+    window.LANG_FR=false;
   </script>
   <script src="index.js"></script>
   <script>
