Expand touch targets.

--- a/web_template/template.html
+++ b/web_template/template.html
@@ -225,24 +225,32 @@
       position: fixed;
       padding-bottom: 2.5rem;
       padding-top: 5rem;
+      display: flex;
+      align-items: flex-end;
+      top: 6rem;
     }
     .control_btn.a {
       bottom: 0;
       left: 0;
+      right: 50%;
       padding-left: 2.5rem;
       padding-right: 3rem;
+      justify-content: flex-start;
     }
     .control_btn.b {
       bottom: 0;
       right: 0;
+      left: 50%;
       padding-left: 3rem;
       padding-right: 2.5rem;
+      justify-content: flex-end;
     }
     .control_btn button {
       font-family: 'PICO-8';
       border: 2px solid white;
       border-radius: 50%;
       width: 2.6rem;
+      height: 2.6rem;
       padding: 1.3rem 0;
       color: white;
       font-size: 0.8rem;
